test/Fail/Issue610-module-alias.err
Issue610-module-alias.agda:28.8-40: error: [UnequalTypes]
The type
  ack (set _)
is not a subtype of
  ⊥
when checking that the expression subst (λ x → x) (cong ack hah) _
has type ⊥
